
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int* aKWCode ;
 scalar_t__* aKWHash ;
 int* aKWLen ;
 scalar_t__* aKWNext ;
 size_t* aKWOffset ;
 int charMap (char const) ;
 int testcase (int) ;
 char const toupper (char const) ;
 char* zKWText ;

__attribute__((used)) static int keywordCode(const char *z, int n, int *pType){
  int i, j;
  const char *zKW;
  if( n>=2 ){
    i = ((charMap(z[0])*4) ^ (charMap(z[n-1])*3) ^ n) % 127;
    for(i=((int)aKWHash[i])-1; i>=0; i=((int)aKWNext[i])-1){
      if( aKWLen[i]!=n ) continue;
      j = 0;
      zKW = &zKWText[aKWOffset[i]];






      if( j<n ) continue;
      testcase( i==0 );
      testcase( i==1 );
      testcase( i==2 );
      testcase( i==3 );
      testcase( i==4 );
      testcase( i==5 );
      testcase( i==6 );
      testcase( i==7 );
      testcase( i==8 );
      testcase( i==9 );
      testcase( i==10 );
      testcase( i==11 );
      testcase( i==12 );
      testcase( i==13 );
      testcase( i==14 );
      testcase( i==15 );
      testcase( i==16 );
      testcase( i==17 );
      testcase( i==18 );
      testcase( i==19 );
      testcase( i==20 );
      testcase( i==21 );
      testcase( i==22 );
      testcase( i==23 );
      testcase( i==24 );
      testcase( i==25 );
      testcase( i==26 );
      testcase( i==27 );
      testcase( i==28 );
      testcase( i==29 );
      testcase( i==30 );
      testcase( i==31 );
      testcase( i==32 );
      testcase( i==33 );
      testcase( i==34 );
      testcase( i==35 );
      testcase( i==36 );
      testcase( i==37 );
      testcase( i==38 );
      testcase( i==39 );
      testcase( i==40 );
      testcase( i==41 );
      testcase( i==42 );
      testcase( i==43 );
      testcase( i==44 );
      testcase( i==45 );
      testcase( i==46 );
      testcase( i==47 );
      testcase( i==48 );
      testcase( i==49 );
      testcase( i==50 );
      testcase( i==51 );
      testcase( i==52 );
      testcase( i==53 );
      testcase( i==54 );
      testcase( i==55 );
      testcase( i==56 );
      testcase( i==57 );
      testcase( i==58 );
      testcase( i==59 );
      testcase( i==60 );
      testcase( i==61 );
      testcase( i==62 );
      testcase( i==63 );
      testcase( i==64 );
      testcase( i==65 );
      testcase( i==66 );
      testcase( i==67 );
      testcase( i==68 );
      testcase( i==69 );
      testcase( i==70 );
      testcase( i==71 );
      testcase( i==72 );
      testcase( i==73 );
      testcase( i==74 );
      testcase( i==75 );
      testcase( i==76 );
      testcase( i==77 );
      testcase( i==78 );
      testcase( i==79 );
      testcase( i==80 );
      testcase( i==81 );
      testcase( i==82 );
      testcase( i==83 );
      testcase( i==84 );
      testcase( i==85 );
      testcase( i==86 );
      testcase( i==87 );
      testcase( i==88 );
      testcase( i==89 );
      testcase( i==90 );
      testcase( i==91 );
      testcase( i==92 );
      testcase( i==93 );
      testcase( i==94 );
      testcase( i==95 );
      testcase( i==96 );
      testcase( i==97 );
      testcase( i==98 );
      testcase( i==99 );
      testcase( i==100 );
      testcase( i==101 );
      testcase( i==102 );
      testcase( i==103 );
      *pType = aKWCode[i];
      break;
    }
  }
  return n;
}
